# Steane_code_implementation

./: EncodedCircuit.py  README.md  basic_noise_model.py  pyproject.toml  run_circuit.py  steane_gates.py  steane_parity_checks.py  steane_state_prep.py
src/circuit_encoder/: EncodedCircuit.py
src_old/: steane_gates.py  steane_parity_checks.py  steane_state_prep.py
tests/: basic_noise_model.py  run_circuit.py  visualize_circuit.py
