[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuit_encoder"
version = "0.0.1"
authors = [
  { name="Zed Fermon", email="zedekiah.fermon@gmail.com" },
]
description = "A project that automatically encodes Qiskit QuantumCircuits using Steane's quantum error code."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Zed-Fermon/Steane_code_implementation"